[metadata]
name = roost
version = 1.0.0
description = Roost is a Rust error generator written in Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qexat/roost
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8
package_dir =
    =src
